--- a/ELK/logstash/test/elk4.5/upgrade5/logstash.tmpl
+++ b/ELK/logstash/test/elk4.5/upgrade5/logstash.tmpl
@@ -1,4 +1,5 @@
 #logstash容器中的模板
+#/usr/local/logstash/template/logstash.tmpl
 cat /usr/local/logstash/template/logstash.tmpl
 {
 	"template": "logstash-*",
